--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
 		<title>NotiPet</title>
 	</head>
 	<body>
-		<noscript
-			>Para utilizar el app web de NotiPet debes tener JavaScript habilitado en
-			el navegador.</noscript
-		>
+		<noscript>Para utilizar el app web de NotiPet debes tener JavaScript habilitado en
+			el navegador.</noscript>
 		<div id="root"></div>
 	</body>
 </html>
