css styles setup and ui components

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="NotiPet Web App" />
-		<title>NotiPet</title>
-	</head>
-	<body>
-		<noscript>Para utilizar el app web de NotiPet debes tener JavaScript habilitado en
-			el navegador.</noscript>
-		<div id="root"></div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="NotiPet Web App" />
+    <title>NotiPet</title>
+  </head>
+  <body>
+    <noscript
+      >Para utilizar el app web de NotiPet debes tener JavaScript habilitado en el
+      navegador.</noscript
+    >
+    <div id="overlay-root"></div>
+    <div id="root"></div>
+  </body>
 </html>
