--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="NotiPet Web App" />
+    <link rel="icon" src="favicon.ico" type="image/x-icon"/>
     <title>NotiPet</title>
   </head>
   <body>
